* Code cleanup